# kakaotalk-a11y-client

./: .gitignore  CHANGELOG.md  KakaotalkA11y.spec  LICENSE  PACKAGES.md  README.md  pyproject.toml  setup.sh
.claude/: CLAUDE.md  settings.json
.claude/guides/: ARCHITECTURE_RULES.md  CONTRIBUTING.md  EVENT_ANALYSIS_WORKFLOW.md  FOCUS_FREEZING_ANALYSIS.md  LOG_ANALYSIS_GUIDE.md
.claude/hooks/: post_commit_release_check.py
.claude/plans/: CLAUDE.md
docs/: AI_DEVELOPMENT.md  AI_PROMPT_EXAMPLES.md  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CONTEXT_MENU_IMPROVEMENT_ANALYSIS.md  IMPROVEMENT_ANALYSIS_2026-01.md  KAKAO_UIA_QUIRKS.md  NVDA_DEEP_ANALYSIS.md  NVDA_EVENT_PATTERNS.md  NVDA_UIA_PATTERNS.md  NVDA_UIA_패턴_레퍼런스.md  PROFILER_ANALYSIS.md  PROJECT_ANALYSIS_KO.md  RELEASING.md  TOOLS_GUIDE.md  UIA_GUIDE.md  UIA_완전_가이드.md  UPDATER.md  USER_GUIDE.md  rust-gui-migration-prompt.md  uia_challenges.md  카카오톡_UIA_분석도구_프롬프트.md  카카오톡_디버그모드_도구통합_프롬프트.md  카카오톡_접근성_개선_프롬프트.md
docs/plans/: PLAN_codebase-refactoring.md
scripts/: README.md  _common.py  add_license_headers.py  analyze_profile.py  build.py  debug_tools.py  dump_menu.py  dump_uia.py  focus_monitor.py  run_related_tests.py  test_chat_navigate.py  test_mapping.py  test_menu_sim.py  test_message_monitor.py  test_tray_menu.py  test_uia_events.py  test_update_dialogs.py
src/kakaotalk_a11y_client/: CLAUDE.md  __about__.py  __init__.py  __main__.py  accessibility.py  clicker.py  config.py  detector.py  focus_monitor.py  hotkeys.py  main.py  mode_manager.py  mouse_hook.py  (+2 more)
tests/: conftest.py  performance_benchmark.py
(+84 files in other folders)
